implementaciones:
- Se implementaron los reportes de administradores
- Se manejaron los roles para acceso a endpoints
- Se cambio el JWT
- Se corrigieron errores